# cuda-flame-graph

./: .gitignore  CMakeLists.txt  README.md  profiler.cpp  pti_loader
include/: profiler.hpp
samples/: CMakeLists.txt
samples/matrixMul/: CMakeLists.txt
samples/matrixMul/src/: main.cpp
samples/matrixMul/src/cuda/: matrixMul.cu
samples/vectorAdd/: CMakeLists.txt
samples/vectorAdd/src/: main.cpp
samples/vectorAdd/src/cuda/: vectorAdd.cu
src/: interface.cpp  profiler.cpp
